z-index fix

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   left: 0;
   top: 4em;
   width: 3em;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .sidebar {
